@@ -8,5 +8,7 @@
  </maintainer>
 <use>
 <flag name='smtp'> Build witch SMTP ( E-Mail) support</flag>
+<flag name='lognorm'>Add support for log/rules normalizations via <pkg>dev-libs/liblognorm</pkg></flag>
+<flag name='pcap'>Add support for network packet capture via <pkg>net-libs/libpcap</pkg></flag>
 </use>
 </pkgmetadata>
