@@ -1,4 +1,4 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
@@ -13,11 +13,11 @@ ESVN_REPO_URI="http://svn.softwink.com/svn/repos/sagan/trunk"
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS=""
-IUSE="smtp mysql postgres prelude lognorm pcap"
+IUSE="smtp mysql postgres prelude +lognorm pcap"
 
 DEPEND="dev-util/pkgconfig"
 RDEPEND="dev-libs/libpcre
-	app-admin/sagan-rules
+	~app-admin/sagan-rules-9999
 	smtp? ( net-libs/libesmtp )
 	pcap? ( net-libs/libpcap )
 	mysql? ( virtual/mysql )
@@ -54,6 +54,12 @@ src_install() {
 
 	keepdir /var/log/sagan
 	keepdir /var/run/sagan
+
+	mkfifo -m 0640 "${D}"/var/run/sagan.fifo || die
+	chown sagan.root "${D}"/var/run/sagan.fifo || die
+
+	touch "${D}"/var/log/sagan/sagan.log || die
+	chown sagan.sagan "${D}"/var/log/sagan/sagan.log || die
 
 	newinitd "${FILESDIR}"/sagan.init sagan || die
 	newconfd "${FILESDIR}"/sagan.confd sagan || die
